                                      Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
  - 23-11-2004 added: inline text editor control (for Kai text chat and all who want it).
  - 21-11-2004 added: Startup splash
  - 21-11-2004 added: Kai text chat (alpha - needs a little visual tidy up, to be improved with 'in-line' edit control). 
  - 21-11-2004 added: GUIConsoleControl, for future use with Kai text-chat (and any other dialog that wants it!). 
  - 20-11-2004 fixed: [ 1068230 ] LCD Setting reverts to SmartXX (on restart). 
  - 20-11-2004 fixed: allow empty password in Kai hosted private arenas. 
  - 19-11-2004 changed: Embedded XBE icon now gets generated as program.tbn alongside program.xbe
  - 19-11-2004 fixed: [ 1066151 ] My Programs: Icon and title not updated when switching DVD`s
  - 19-11-2004 fixed: [ 1066281 ] Bookmarks on panel (right side) does not use Depth parameter
  - 18-11-2004 fixed: handes high-volume of Kai app_specific requests.
  - 18-11-2004 fixed: Various crashes when subtitle font was set to TTF
  - 18-11-2004 added: Comprehensive Kai hosting options.
  - 18-11-2004 fixed: Less aggressive Kai player profile requesting.
  - 17-11-2004 fixed: Buttonscroller, icon is not shown when last control is not the scroller
  - 17-11-2004 fixed: Kai hosting within private arenas (with sophisticated hosting options to follow soon)
  - 16-11-2004 fixed: Accurate Kai reporting of XBOX Live Communicator / Headset status.
  - 16-11-2004 fixed: Improved performance sorting Kai views (Friends, Games and Arenas).
  - 15-11-2004 added: New screensaver interface/API with Template and sample (Pyro) screensaver
  - 15-11-2004 updated: German (Austrian) language file (Thnx to CEOMR)